# deterministic-agentic-sdlc-workflow

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
agents/: 2026-03-01-making-system-operational-and-creating-agents-007.md  2026-03-01-making-system-operational-and-creating-agents-016.md  agent-profile-framework-field-should-capture-both-orchestration-framework-and-base-model.md  agent-profiles-must-include-escalation-conditions-as-a-required-design-field.md  agent-registry.md  agentic-sdlc-systems-require-explicit-human-supervision-at-high-stakes-handoff-points.md  base-model-quality-matters-more-than-framework-choice-for-agent-capability.md  cache.py  can-github-spec-kit-format-be-adopted-as-the-canonical-spec-artifact-format-for-this-vault.md  checkpointer.py  code-generation-agents-without-test-awareness-produce-output-that-increases-iteration-cycles-with-downstream-test-generation-agents.md  code-generator-agent.md  crewai-agent-to-agent-handoff-and-interaction-api.md  crewai-aligns-best-with-catalog-driven-sdlc-agent-architectures.md  hard-iteration-limits-per-task-are-required-to-prevent-runaway-loops-in-multi-agent-pipelines.md  hybrid-sequential-hierarchical-orchestration-gives-predictable-flow-with-dynamic-error-handling.md  intelligent-context-windowing-is-needed-when-spec-artifacts-exceed-the-context-window.md  language-agnostic-code-generation-prompts-require-a-project-config-parameter-to-specialize-for-framework-and-toolchain-without-prompt-rewrites.md  llm.py  memory.py  models.py  multi_repo.py  parallel.py  (+29 more)
(+176 files in other folders)
