[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "Deterministic agentic workflow automating the software development lifecycle"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.2.0",
    "temporalio>=1.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.2.0",
    "pinecone-client>=5.0.0",
    "e2b>=1.2.0",
    "e2b-code-interpreter>=1.1.0",
    "guardrails-ai>=0.6.0",
    "mcp>=1.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]
ollama = ["langchain-ollama>=0.3.0"]
all-providers = [
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "config", "mcp_servers"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
